# LabelLayout

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: wheels.yml
src/: interface.cpp  labelLayoutSolver.hpp  main.cpp
workspace/: README.md  render.py
